[gd_scene load_steps=3 format=3 uid="uid://dwurxjv3fne6v"]

[ext_resource type="PackedScene" uid="uid://cs1ww36hn5o6x" path="res://Scenes/Enemy/Basic/Enemy.tscn" id="1_7ah8k"]
[ext_resource type="Script" path="res://Scripts/Enemies/Basic/FlyingEnemy.gd" id="2_1fe0b"]

[node name="Enemy" instance=ExtResource("1_7ah8k")]
script = ExtResource("2_1fe0b")

[node name="LineOfSight" parent="." index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.80094, 0)

[node name="CollisionShape3d" parent="." index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 0)

[node name="NavigationAgent3d" parent="." index="2"]
target_desired_distance = 6.0

[node name="Sprite3D" parent="." index="3"]
transform = Transform3D(0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 0, 5.04295, 0)

[node name="VisionArea" parent="." index="6"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1.58746, 1.55965)

[node name="CollisionShape3D" parent="VisionArea" index="0"]
transform = Transform3D(5, 0, 0, 0, -4.24024, -2.6496, 0, 2.6496, -4.24024, -0.10364, 4.00073, 1.92656)
